# gep

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  gep.h  gep.hpp  gep_calc.cpp  gep_func_box.cpp  gep_parse.cpp  gep_print.cpp  gep_rand.cpp
test/: CMakeLists.txt  booth_func_tra.csv  booth_func_tst.csv  gep_type_test.c  stock-5-1tra.csv  stock-5-1tra_norm.csv  stock-5-1tst.csv  test_booth.cpp  test_exp.cpp  test_gep_parse.cpp  test_rand_chro.cpp  test_stock.cpp  test_stock_model.cpp  test_stock_norm.cpp  test_stock_type2.cpp  test_stock_type3.cpp
